--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,63 +8,78 @@
     tools:context=".MainActivity">
 
     <!-- Текстовое поле с объяснением -->
+
+    <!-- Кнопка NEXT -->
+
     <TextView
         android:id="@+id/question_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:padding="24dp"
-        android:textAlignment="center"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="450dp"
+        android:background="#C8E6C9"
+        android:gravity="left"
+        android:padding="10dp"
+        android:textAlignment="textStart"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         tools:text="@string/q_1" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="223dp"
         android:layout_height="101dp"
+        android:layout_marginStart="30dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.404">
-
-        <Button
-            android:id="@+id/second_option_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/cardview_compat_inset_shadow"
-            android:text="@string/q_1_op_2"
-            app:cornerRadius="20sp"
-            app:strokeWidth="1sp" />
+        app:layout_constraintTop_toBottomOf="@+id/question_text_view"
+        app:layout_constraintVertical_bias="0.044">
 
         <Button
             android:id="@+id/first_option_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/cardview_compat_inset_shadow"
+            android:backgroundTint="#5C6BC0"
+            android:paddingStart="10dp"
             android:text="@string/q_1_op_1"
-            app:cornerRadius="20sp"
+            app:cornerRadius="10sp"
             app:strokeWidth="1sp" />
+
+        <Button
+            android:id="@+id/second_option_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/cardview_compat_inset_shadow"
+            android:backgroundTint="#5C6BC0"
+            android:paddingStart="10dp"
+            android:text="@string/q_1_op_2"
+            app:cornerRadius="10sp"
+            app:strokeWidth="1sp" />
+
+
     </LinearLayout>
 
-    <!-- Кнопка NEXT -->
     <Button
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:backgroundTint="#FFEB3B"
+        android:backgroundTint="#FFCA28"
         android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="4dp"
         android:text="@string/next_button"
         android:textColor="@color/black"
+        app:cornerRadius="10sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
@@ -76,15 +91,45 @@
         android:layout_height="140dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="80dp"
+        android:gravity="top"
         android:padding="20dp"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/next_button"
+        app:layout_constraintVertical_bias="0.0"
         tools:text="@string/q_1_explanation" />
+
+    <TextView
+        android:id="@+id/statistics_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="20dp"
+        android:text="@string/statistics"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_exit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="#5C6BC0"
+        android:paddingStart="10dp"
+        android:text="@string/exit_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:strokeWidth="1sp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
