--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,6 @@
     android:background="@color/bg"
     tools:context=".MainActivity">
 
-    <!-- Текстовое поле с объяснением -->
-
-    <!-- Кнопка NEXT -->
-
     <TextView
         android:id="@+id/right_answers_quantity"
         android:layout_width="wrap_content"
@@ -47,8 +43,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="223dp"
-        android:layout_height="101dp"
+        android:layout_width="349dp"
+        android:layout_height="100dp"
         android:layout_marginStart="30dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -60,31 +56,34 @@
 
         <Button
             android:id="@+id/first_option_button"
-            android:layout_width="wrap_content"
+            android:layout_width="349dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/cardview_compat_inset_shadow"
             android:backgroundTint="#5C6BC0"
             android:paddingStart="10dp"
             android:text="@string/q_1_op_1"
-            android:textSize="16sp"
+            android:textAllCaps="false"
+            android:textSize="20sp"
             app:cornerRadius="10sp"
             app:strokeWidth="1sp" />
 
         <Button
             android:id="@+id/second_option_button"
-            android:layout_width="wrap_content"
+            android:layout_width="349dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/cardview_compat_inset_shadow"
             android:backgroundTint="#5C6BC0"
             android:paddingStart="10dp"
             android:text="@string/q_1_op_2"
-            android:textSize="16sp"
+            android:textAllCaps="false"
+            android:textSize="20sp"
             app:cornerRadius="10sp"
             app:strokeWidth="1sp" />
 
 
     </LinearLayout>
 
+    <!-- Кнопка NEXT -->
     <Button
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
@@ -101,15 +100,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-    <!-- Объяснение -->
+    <!-- Текстовое поле с объяснением -->
     <TextView
         android:id="@+id/explanation_text_view"
-        android:layout_width="380dp"
-        android:layout_height="140dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="366dp"
+        android:layout_height="103dp"
+        android:layout_marginTop="25dp"
         android:layout_marginBottom="80dp"
         android:gravity="top"
-        android:padding="20dp"
+        android:padding="5dp"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -122,7 +121,7 @@
         tools:text="@string/q_1_explanation" />
 
     <TextView
-        android:id="@+id/question_asked_qantity"
+        android:id="@+id/question_asked_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
