--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E8F5E9"
+    android:background="@color/bg"
     tools:context=".MainActivity">
 
     <TextView
@@ -28,10 +28,10 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="456dp"
-        android:background="#C8E6C9"
+        android:background="@color/bg"
         android:gravity="left"
         android:padding="10dp"
-        android:textAlignment="textStart"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -41,30 +41,32 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:text="@string/q_1" />
 
+    <!-- Кнопка NEXT -->
+
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="349dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="30dp"
+        android:layout_width="357dp"
+        android:layout_height="107dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.592"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/question_text_view"
-        app:layout_constraintVertical_bias="0.161">
+        app:layout_constraintVertical_bias="0.157">
 
         <Button
             android:id="@+id/first_option_button"
             android:layout_width="349dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/cardview_compat_inset_shadow"
-            android:backgroundTint="#5C6BC0"
+            android:backgroundTint="@color/btn_color_default"
             android:paddingStart="10dp"
             android:text="@string/q_1_op_1"
             android:textAllCaps="false"
+            android:textColor="@color/black"
             android:textSize="20sp"
-            app:cornerRadius="10sp"
+            app:cornerRadius="25sp"
             app:strokeWidth="1sp" />
 
         <Button
@@ -72,29 +74,30 @@
             android:layout_width="349dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/cardview_compat_inset_shadow"
-            android:backgroundTint="#5C6BC0"
+            android:backgroundTint="@color/btn_color_default"
             android:paddingStart="10dp"
             android:text="@string/q_1_op_2"
             android:textAllCaps="false"
+            android:textColor="@color/black"
             android:textSize="20sp"
-            app:cornerRadius="10sp"
+            app:cornerRadius="25sp"
             app:strokeWidth="1sp" />
 
 
     </LinearLayout>
 
-    <!-- Кнопка NEXT -->
     <Button
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:backgroundTint="#FFCA28"
+        android:backgroundTint="#FFF176"
         android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="4dp"
         android:text="@string/next_button"
+        android:textAllCaps="false"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:cornerRadius="10sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -140,10 +143,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="20dp"
-        android:backgroundTint="#5C6BC0"
+        android:backgroundTint="@color/btn_color_default"
         android:paddingStart="10dp"
         android:text="@string/exit_button"
-        android:textSize="16sp"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:cornerRadius="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:strokeWidth="1sp" />
