add finish activity and transfer values between activities

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:backgroundTint="@color/bg"
-        android:fontFamily="@font/abeezee"
+        android:fontFamily="sans-serif"
         android:lineSpacingExtra="8sp"
         android:padding="20dp"
         android:text="@string/about"
