--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="bg">#CCEBEEF1</color>
-    <color name="btn_color_default">#ADC0EB</color>
+    <color name="btn_color_default">#ABD7F9</color>
     <color name="right_answer_bg">#80D06F</color>
     <color name="wrong_answer_bg">#F16969</color>
 </resources>
