--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,15 +46,13 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="357dp"
-        android:layout_height="107dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:background="@color/bg"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.592"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/question_text_view"
-        app:layout_constraintVertical_bias="0.157">
+        app:layout_constraintTop_toBottomOf="@+id/question_text_view">
 
         <Button
             android:id="@+id/first_option_button"
