--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -16,10 +16,11 @@
         android:id="@+id/btn_start"
         android:layout_width="370dp"
         android:layout_height="65dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="250dp"
         android:backgroundTint="@color/btn_color_default"
-        android:padding="15dp"
+        android:padding="0dp"
         android:text="Ответить на 10 вопросов"
+        android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -38,7 +39,6 @@
         android:layout_height="65dp"
         android:layout_marginTop="15dp"
         android:backgroundTint="@color/btn_color_default"
-        android:padding="15dp"
         android:text="О приложении"
         android:textAllCaps="false"
         android:textColor="@color/black"
@@ -55,7 +55,6 @@
         android:layout_height="65dp"
         android:layout_marginTop="15dp"
         android:backgroundTint="@color/btn_color_default"
-        android:padding="15dp"
         android:text="Выйти"
         android:textAllCaps="false"
         android:textColor="@color/black"
