--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -16,7 +16,7 @@
         android:id="@+id/btn_start"
         android:layout_width="370dp"
         android:layout_height="65dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="25dp"
         android:backgroundTint="@color/btn_color_default"
         android:padding="0dp"
         android:text="Ответить на 10 вопросов"
@@ -27,9 +27,9 @@
         app:cornerRadius="25sp"
         app:iconPadding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.551"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:rippleColor="@color/bg"
         app:strokeColor="@color/bg" />
 
@@ -64,5 +64,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_about"
         app:rippleColor="@color/bg" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="361dp"
+        android:layout_height="229dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/flag_of_the_united_kingdom" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
