add questions, change buttons design

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/cardview_compat_inset_shadow"
             android:backgroundTint="@color/btn_color_default"
+            android:minHeight="65dip"
             android:paddingStart="10dp"
             android:text="@string/q_1_op_1"
             android:textAllCaps="false"
@@ -74,6 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/cardview_compat_inset_shadow"
             android:backgroundTint="@color/btn_color_default"
+            android:minHeight="65dip"
             android:paddingStart="10dp"
             android:text="@string/q_1_op_2"
             android:textAllCaps="false"
