--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -30,7 +30,7 @@
     <Button
         android:id="@+id/btn_to_main_menu"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="65dp"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/btn_color_default"
         android:text="В меню"
