--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -10,7 +10,7 @@
     <Button
         android:id="@+id/btn_to_main_menu2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="65dp"
         android:layout_marginTop="30dp"
         android:backgroundTint="@color/btn_color_default"
         android:text="В меню"
