--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,9 @@
         android:id="@+id/linearLayout"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="20dp"
         android:background="@color/bg"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +63,7 @@
 
         <Button
             android:id="@+id/first_option_button"
-            android:layout_width="349dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/cardview_compat_inset_shadow"
             android:backgroundTint="@color/btn_color_default"
@@ -79,7 +81,7 @@
 
         <Button
             android:id="@+id/second_option_button"
-            android:layout_width="349dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/cardview_compat_inset_shadow"
             android:backgroundTint="@color/btn_color_default"
@@ -121,10 +123,12 @@
         android:id="@+id/explanation_text_view"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
         android:gravity="top"
         android:letterSpacing="0.03"
-        android:padding="5dp"
+        android:padding="0dp"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -138,7 +142,7 @@
         android:id="@+id/question_asked_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:text="@string/questions_asked"
         android:textAlignment="center"
@@ -152,8 +156,8 @@
         android:id="@+id/btn_exit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="15dp"
         android:backgroundTint="@color/btn_color_default"
         android:fontFamily="sans-serif"
         android:letterSpacing="0.03"
@@ -172,7 +176,7 @@
         android:id="@+id/textView"
         android:layout_width="56dp"
         android:layout_height="21dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:text="Вопрос:"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -183,7 +187,7 @@
         android:id="@+id/textView2"
         android:layout_width="121dp"
         android:layout_height="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:text="Варианты ответа:"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
