--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -16,7 +16,9 @@
         android:id="@+id/btn_start"
         android:layout_width="370dp"
         android:layout_height="65dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="25dp"
+        android:layout_marginEnd="30dp"
         android:backgroundTint="@color/btn_color_default"
         android:padding="0dp"
         android:text="Ответить на 10 вопросов"
@@ -37,7 +39,9 @@
         android:id="@+id/btn_about"
         android:layout_width="370dp"
         android:layout_height="65dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="30dp"
         android:backgroundTint="@color/btn_color_default"
         android:text="О приложении"
         android:textAllCaps="false"
@@ -53,7 +57,9 @@
         android:id="@+id/btn_exit_complete"
         android:layout_width="370dp"
         android:layout_height="65dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="30dp"
         android:backgroundTint="@color/btn_color_default"
         android:text="Выйти"
         android:textAllCaps="false"
@@ -69,7 +75,9 @@
         android:id="@+id/imageView"
         android:layout_width="361dp"
         android:layout_height="229dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="100dp"
+        android:layout_marginEnd="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
